Add swagger api for accessories and categories
